# MangoHud

./: .editorconfig  .gitignore  .gitmodules  build.sh  comps.json5  devbox.json  generate-card.py  meson.build
demo/: CMakeLists.txt
demo/shaders/: cube.vert
demo/src/: main.cpp
src/: mangohud.json.in  meson.build  overlay.cpp  overlay.h  overlay_params.cpp  overlay_params.h  shared_x11.cpp  vulkan.cpp
src/ui/: layout.cpp  layout.h
src/ui/io/: x11.cpp  x11.h
